修改升级与转交逻辑,添加客户服务负责人和服务升级人员字段

--- a/app/views/icm/incident_journals/_list_journals.html.erb
+++ b/app/views/icm/incident_journals/_list_journals.html.erb
@@ -16,6 +16,7 @@
          <ul>
 
              <% journal.incident_histories.each do |h|%>
+               <%next unless h.to_s %>
                <li><%= h %>
              <% end%>
 
