--- a/app/views/icm/incident_journals/edit_upgrade.html.erb
+++ b/app/views/icm/incident_journals/edit_upgrade.html.erb
@@ -75,18 +75,13 @@
       <table class="detailList"  cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
-              <td class="dataCol">
-                <%=f.blank_select :support_group_id,available_support_group,
-                                                    {},{:required=>true,:id=>"incident_request_support_group_id"}%>
-              </td>
               <td class="labelCol"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:support_person_id,available_supporter(@incident_request.support_group_id||0),{},
-                                  {:required=>true,
-                                   :id=>"incident_request_support_person_id",
-                                   :href=>url_for(:controller=>"irm/support_group_members",:action=>"get_options",:format=>"json",:group_id=>"{incident_request_support_group_id}"),
-                                   :depend=>"incident_request_support_group_id"
-                                   }) %></td>
+              <td class="dataCol">
+                <%=f.blank_select :support_person_id,available_upgradable_supporter(@incident_request.support_group_id||0),
+                                                    {},{:required=>true,:id=>"incident_request_support_person_id"}%>
+              </td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
 
             </tr>
               <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
