为附件上传限制demo测试

--- a/app/views/irm/demo/index.html.erb
+++ b/app/views/irm/demo/index.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "irm/kanbans/kanban_main", :locals => {:kanban => @kanban}%>
+<%= puts("++++++++++" + Irm::SystemParametersManager.upload_file_limit.kilobytes.to_s)%>
