--- a/app/views/irm/profiles/manage_lanes.html.erb
+++ b/app/views/irm/profiles/manage_lanes.html.erb
@@ -1,67 +1,23 @@
-<%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
-<div id="ep" class="bDetailBlock bPageBlock">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_profile) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @profile}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_common_info) %><span class="titleSeparatingColon">:</span></h3>
-    </div>
-
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_profile_code)%></label></td>
-              <td class="dataCol"><%= @profile.code%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="dataCol"><%= @profile[:name]%></td>
-              <td class="labelCol"><label><%=(t :label_irm_profile_user_license)%></label></td>
-              <td class="dataCol"><%= @profile[:user_license_name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%;"><%= @profile[:description]%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div class="bPageBlock">
+<%= setting_title %>
+<div class="listRelatedObject setupBlock">
+    <div class="bPageBlock">
       <div class="pbHeader">
         <table cellpadding="0" cellspacing="0" border="0">
           <tbody>
             <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_profile_owned_kanban) %></h2></td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:label_irm_profile_add_kanban), {:action => "add_kanban", :profile_id => @profile.id}%></div>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_profile_list) %></h2></td>
+              <td id="topButtonRow" class="pbButton">
+                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
               </td>
               <td class="pbHelp">
-                <div></div>
+                <div id="profilesSearchBox"></div>
               </td>
             </tr>
           </tbody>
         </table>
-    </div>
-
-    <div class="pbSubsection">
-      <div class="datatable">
+      </div>
+      <div class="pbBody">
+        <div class="datatable">
         <div class="yui3-widget yui3-datatable">
           <div class="yui3-datatable-content">
               <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
@@ -138,45 +94,8 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-</div>
-
-<div class="listRelatedObject setupBlock">
-    <div class="bPageBlock">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_profile_function_list) %></h2></td>
-              <td class="pbButton">
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <% gfs = grouped_functions %>
-        <% fzs = function_zones %>
-        <% pfids = @profile.function_ids %>
-        <% fzs.each do |zone|%>
-          <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
-          <fieldset id="<%= zone[:code].downcase %>Group">
-            <legend><%= zone[:name] %></legend>
-            <% gfs[zone[:code]].each do |func| %>
-                <% next unless pfids.include?(func.id) %>
-                <div  style="float:left;width:33%;"><label>
-                  <%= check_img("Y") %>
-                  <%= func[:name] %>
-                </label></div>
-            <% end%>
-          </fieldset>
-        <%end%>
       </div>
     </div>
 </div>
 
-<%=render :partial=>"multilingual/show",:locals=>{:main_data=>@profile} %>
+
