--- a/app/views/irm/profiles/edit_kanban.html.erb
+++ b/app/views/irm/profiles/edit_kanban.html.erb
@@ -6,7 +6,7 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_profile_select_kanban)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_kanban_edit)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
             <div class="button"><%= link_to t(:cancel), {:action=>"show", :id => @profile.id}%></div>
