KANBAN前台页面，获取方式更改，只需传入位置CODE（POSITION CODE）

--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -39,7 +39,7 @@
                 <tr>
                   <td colspan="2">
                     <div class="toolsContentRight">
-                      <%= render :partial => "irm/kanbans/kanban_main"%>
+                      <%= render :partial => "irm/kanbans/kanban_main", :locals => {:position_code => "INCIDENT_REQUEST_PAGE"}%>
                     </div>
                   </td>
                 </tr>
