--- a/app/views/irm/kanbans/new.html.erb
+++ b/app/views/irm/kanbans/new.html.erb
@@ -42,6 +42,14 @@
               <td class="labelCol"><label><%=(t :description)%></label></td>
               <td class="data2Col"><%=f.text_area :description, :rows => 4%></td>
             </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_kanban_refresh_interval)%></label></td>
+              <td class="data2Col"><%=f.text_field :refresh_interval, :required=>true, :size =>5%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_lane_limit)%></label></td>
+              <td class="data2Col"><%=f.text_field :limit, :required=>true, :size =>5%></td>
+            </tr>
         </tbody>
       </table>
     </div>
