--- a/app/views/irm/kanbans/show.html.erb
+++ b/app/views/irm/kanbans/show.html.erb
@@ -28,7 +28,15 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="dataCol"><%= @kanban[:description]%></td>
+              <td class="data2Col"><%= @kanban[:description]%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_kanban_refresh_interval)%></label></td>
+              <td class="data2Col"><%= @kanban.refresh_interval%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_lane_limit)%></label></td>
+              <td class="data2Col"><%= @kanban.limit%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :active)%></label></td>
@@ -39,5 +47,50 @@
     </div>
   </div>
 </div>
+
+<div class="bRelatedList">
+    <div class="listRelatedObject taskBlock">
+      <div class="bPageBlock secondaryPalette">
+        <div class="pbHeader">
+          <table cellspacing="0" cellpadding="0" border="0">
+            <tbody>
+            <tr>
+              <td class="pbTitle">
+                <h3><%=t(:label_irm_kanban_owned_lane)%></h3>
+              </td>
+              <td class="pbButton">
+                <div class="button"><%= link_to t(:label_irm_kanban_add_lane), {:controller=>"irm/kanbans",
+                                                          :action => "select_lanes",:id=>@kanban.id}%></div>
+              </td>
+              <td class="pbHelp">
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="pbBody">
+          <div id="owned_lanes_list" class="datatable" style="width:100%;">
+            <div id="id" style="display:none">
+              <%= icon_link_remove({:controller=>"irm/kanbans",:action=>"delete_lane",:lane_id=>"{irm_lane_id}",:kanban_id => @kanban.id},:confirm => t(:label_are_you_sure) ,
+                                      :method => :delete) %>&nbsp;
+              <%= icon_link("btn_up", t(:move_up), {:controller => "irm/kanbans", :action => "up_lane", :kanban_id => @kanban.id, :lane_id => "{irm_lane_id}"})%>&nbsp;
+              <%= icon_link("btn_down", t(:move_down), {:controller => "irm/kanbans", :action => "down_lane", :kanban_id => @kanban.id, :lane_id => "{irm_lane_id}"})%>
+            </div>
+          </div>
+          <!-- Begin company access table -->
+            <%= datatable("owned_lanes_list",url_for(:controller=>"irm/kanbans",:action=>"get_owned_lanes",:id=>@kanban.id),
+                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
+                               {:key => "irm_lane_id", :hidden =>true},
+                               {:key=>"lane_code",:label=>t(:label_irm_lane_code),:width => "150px"},
+                               {:key=>"lane_name",:label=>t(:name), :width => "150px"},
+                               {:key=>"lane_description",:label=>t(:description), :width => "200px"}])%>
+        </div>
+        <div class="pbFooter secondaryPalette">
+        <div class="bg"></div>
+        </div>
+      </div>
+    </div>
+</div>
+
 
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@kanban} %>
