--- a/app/views/irm/profiles/_new_form.html.erb
+++ b/app/views/irm/profiles/_new_form.html.erb
@@ -71,6 +71,20 @@
       </table>
     </div>
 
+    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
+      <h3><%= t(:label_irm_kanban) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label for="profile_description"><%=t(:label_irm_profile_ir_page_kanban)%></label></td>
+              <td class="data2Col" colspan="3" width="82%"><%=select_tag_alias :ir_kanban, available_kanbans_by_position("INCIDENT_REQUEST_PAGE")%></td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+
     <div class="pbSubheader first tertiaryPalette">
       <h3><%= t(:label_irm_profile_application_list) %></h3>
     </div>
