删除controller,model,view，helper中与公司相关的内容

--- a/app/views/icm/priority_codes/show.html.erb
+++ b/app/views/icm/priority_codes/show.html.erb
@@ -19,10 +19,10 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_priority_code_company)%></label></td>
-              <td class="dataCol"><%=@priority_code[:company_name]%></td>
               <td class="labelCol"><label><%=(t :label_icm_priority_code_priority_code)%></label></td>
               <td class="dataCol"><%=@priority_code.priority_code%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_icm_priority_code_name)%></label></td>
