--- a/app/views/icm/rule_settings/_edit_form.html.erb
+++ b/app/views/icm/rule_settings/_edit_form.html.erb
@@ -27,10 +27,11 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_rule_setting_company)%></label></td>
-              <td class="dataCol"><%=@rule_setting[:company_name]%></td>
+
               <td class="labelCol"><label><%=(t :label_icm_rule_setting_report_date_changable)%></label></td>
               <td class="dataCol"><%=f.check_box :report_date_changable%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><%=(t :label_icm_rule_setting_auto_closure_days)%></td>
