--- a/app/views/icm/rule_settings/show.html.erb
+++ b/app/views/icm/rule_settings/show.html.erb
@@ -19,8 +19,8 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_rule_setting_company)%></label></td>
-              <td class="dataCol"><%=@rule_setting[:company_name]%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
               <td class="labelCol"><label><%=(t :label_icm_rule_setting_report_date_changable)%></label></td>
               <td class="dataCol"><%= check_img(@rule_setting.report_date_changable)%></td>
             </tr>
