--- a/app/views/irm/monitor_icm_group_assigns/index.html.erb
+++ b/app/views/irm/monitor_icm_group_assigns/index.html.erb
@@ -33,7 +33,7 @@
                         </div>
                       </th>
                       <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_irm_support_group_show) %>
+                        <div class="yui3-datatable-liner"><%= t(:label_irm_group_show) %>
                         </div>
                       </th>
                       <th class="yui3-column">
