--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -67,8 +67,8 @@
              <td class="dataCol"><%= @person[:site_group_name] %></td>
              </tr>
              <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_department)%></label></td>
-                 <td class="dataCol"><%= @person[:department_name]%></td>
+                 <td class="labelCol"></td>
+                 <td class="dataCol"></td>
 
                <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
                  <td class="dataCol"><%= @person[:site_name] %></td>
