--- a/app/views/irm/roles/_new_form.html.erb
+++ b/app/views/irm/roles/_new_form.html.erb
@@ -43,7 +43,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_role_report_to_role)%></label></td>
-              <td class="dataCol"><%=f.blank_select :report_to_role_id, available_parent_role, {}%></td>
+              <td class="dataCol"><%=f.blank_select :report_to_role_id, available_parentable_role, {}%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
