--- a/app/views/slm/service_agreements/_new_form.html.erb
+++ b/app/views/slm/service_agreements/_new_form.html.erb
@@ -31,8 +31,8 @@
         <tbody>
 
             <tr>
-              <td class="labelCol"><label for="service_agreement_service_company"><%=t(:label_slm_service_agreement_service_company)%></label></td>
-              <td class="dataCol"><%=f.select(:service_company_id,available_company,{},:required=>true,:id=>"company_id")%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
               <td class="labelCol"><label for="service_agreement_active_start_date"><%=t(:label_slm_service_agreement_active_start_date)%></label></td>
               <td class="dataCol"><%= f.text_field :active_start_date, :id=>"service_agreement_active_start_date"%></td>
             </tr>
