--- a/app/views/slm/service_agreements/show.html.erb
+++ b/app/views/slm/service_agreements/show.html.erb
@@ -24,8 +24,8 @@
         <tbody>
 
             <tr>
-              <td class="labelCol"><label for="service_agreement_service_company"><%=t(:label_slm_service_agreement_service_company)%></label></td>
-              <td class="dataCol"><%=@service_agreement[:company_name]%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
               <td class="labelCol"><label for="service_agreement_active_date"><%=t(:label_slm_service_agreement_active_date)%></label></td>
               <td class="dataCol"><%=@service_agreement.active_start_date%><%= t(:label_to) %>
                                         <%= @service_agreement.active_end_date %></td>
