--- a/app/views/icm/impact_ranges/_new_form.html.erb
+++ b/app/views/icm/impact_ranges/_new_form.html.erb
@@ -32,12 +32,10 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label for="impact_range_company"><%=(t :label_icm_impact_range_company)%></label></td>
-              <td class="dataCol"><%=f.blank_select :company_id,available_company,
-                                                    {},{:id=>"impact_range_company"}%></td>
               <td class="labelCol"><label for="impact_range_impact_code"><%=(t :label_icm_impact_range_impact_code)%></label></td>
               <td class="dataCol"><%=f.text_field :impact_code, :required=>true,:irm_uppercase=>true,:id=>"impact_range_impact_code"%></td>
-
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="impact_range_name"><%=(t :label_icm_impact_range_name)%></label></td>
