--- a/app/views/icm/impact_ranges/show.html.erb
+++ b/app/views/icm/impact_ranges/show.html.erb
@@ -19,10 +19,11 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_impact_range_company)%></label></td>
-              <td class="dataCol"><%= @impact_range[:company_name]%></td>
+
               <td class="labelCol"><label><%=(t :label_icm_impact_range_impact_code)%></label></td>
-              <td class="dataCol"><%= @impact_range.impact_code%></td>              
+              <td class="dataCol"><%= @impact_range.impact_code%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_icm_impact_range_name)%></label></td>
