--- a/app/views/icm/urgence_codes/_new_form.html.erb
+++ b/app/views/icm/urgence_codes/_new_form.html.erb
@@ -32,9 +32,8 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label for="urgence_code_company"><%=(t :label_icm_urgence_code_company)%></label></td>
-              <td class="dataCol"><%=f.select :company_id,nullable_options_for_select(selectable_companies,@urgence_code.company_id),
-                                                                  {},{:require=>true,:id=>"urgence_code_company"}%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
               <td class="labelCol"><label for="urgence_code_urgency_code"><%=(t :label_icm_urgence_code_urgency_code)%></label></td>
               <td class="dataCol"><%=f.text_field :urgency_code, :required=>true,:irm_uppercase=>true,:id=>"urgence_code_urgency_code"%></td>
             </tr>
