--- a/app/views/icm/urgence_codes/show.html.erb
+++ b/app/views/icm/urgence_codes/show.html.erb
@@ -19,8 +19,8 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_urgence_code_company)%></label></td>
-              <td class="dataCol"><%=@urgence_code[:company_name]%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
               <td class="labelCol"><label><%=(t :label_icm_urgence_code_urgency_code)%></label></td>
               <td class="dataCol"><%=@urgence_code.urgency_code%></td>
             </tr>
