--- a/app/views/irm/reports/_edit_step_5.html.erb
+++ b/app/views/irm/reports/_edit_step_5.html.erb
@@ -39,7 +39,7 @@
                     <td></td>
                     <td>
                       <label for="filterCompanyId"><%= t(:label_irm_report_filter_company) %></label>
-                      <%=f.blank_select(:filter_company_id,available_company,{},{:id=>"filterCompanyId"})%>
+                      <%=f.blank_select(:filter_company_id,[],{},{:id=>"filterCompanyId"})%>
                     </td>
                     <td>
                       <fieldset>
