--- a/app/views/slm/service_members/_new_form.html.erb
+++ b/app/views/slm/service_members/_new_form.html.erb
@@ -32,34 +32,11 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
 
-            <tr>
-              <td class="labelCol"><label for="service_member_category_code"><%=t(:label_slm_service_member_service_company)%></label></td>
-              <td class="dataCol"><%=f.select(:service_company_id,available_company,{},:required=>true,:id=>"company_id")%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
 
             <tr>
               <td class="labelCol"><label for="service_member_name"><%=t(:label_slm_service_member_service_organization)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:service_organization_id,[],{},
-                                  {:id=>"organization_id",
-                                   :href=>url_for(:controller=>"irm/organizations",:action=>"get_by_company",:format=>"json",:belonged_company_id=>"{company_id}"),
-                                   :depend=>"company_id",
-                                   :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                   }) %>
+              <td class="dataCol"><%= f.blank_select(:service_organization_id,available_organization,{},{:required=>true}) %>
               </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="service_member_description"><%=t(:label_slm_service_member_service_department)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:service_department_id,[],{},
-                                  {:id=>"department_id",
-                                   :href=>url_for(:controller=>"irm/departments",:action=>"get_by_organization",:format=>"json",:organization_id=>"{organization_id}"),
-                                   :depend=>"organization_id",
-                                   :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                   }) %></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
@@ -104,9 +81,3 @@
   </div>
 </div>
 <% end %>
-<script type="text/javascript">
-  GY.use("cascadeselect",function(Y){
-     new Y.CascadeSelect({source: "#company_id",target:["#organization_id","#department_id"]});
-     new Y.CascadeSelect({source: "#organization_id",target:["#department_id"]});
-  });
-</script>
