--- a/app/views/irm/group_members/new_from_person.html.erb
+++ b/app/views/irm/group_members/new_from_person.html.erb
@@ -39,9 +39,9 @@
         </div>
         <%= datatable("supportGroupMembers",url_for(:action=>"get_person_support_group",:person_id=>@person.id),
                   [{:key=>"id",:hidden=>true},
-                   {:key=>"name",:label=>t(:label_irm_support_group_name),:searchable=>true},
-                   {:key=>"group_code",:label=>t(:label_irm_support_group_group_code),:searchable=>true},
-                   {:key=>"company_name",:label=>t(:label_irm_support_group_company_name)},],
+                   {:key=>"name",:label=>t(:label_irm_group_name),:searchable=>true},
+                   {:key=>"group_code",:label=>t(:label_irm_group_group_code),:searchable=>true},
+                   {:key=>"organization_name",:label=>t(:label_irm_group_organization_name)},],
                    {:paginator_box=>"personPaginator",:search_box=>"selectablePersonSearchBox",:select=>"multiple"})%>
         <div id="personPaginator"></div>
       </div>
