--- a/app/views/irm/groups/_edit_form.html.erb
+++ b/app/views/irm/groups/_edit_form.html.erb
@@ -1,12 +1,11 @@
 <%= setting_title %>
-
-<%= form_for(@department,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@group,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_department_edit)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_group_edit)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
             <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
@@ -16,34 +15,42 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @department%>
+    <%= error_for @group%>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend"><span class="requiredExampleOuter">
           <span class="requiredExample">&nbsp;</span></span>
            <span class="requiredMark">*</span><span class="requiredText"> = <%=t(:label_is_required)%></span></span></span>
-      <h3><%=t(:label_irm_department_info)%></h3>
+      <h3><%=t(:label_common_info)%></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_department_company_name)%></label></td>
-              <td class="dataCol"><%=@department[:company_name]%></td>
-              <td class="labelCol"><label><%=(t :label_irm_department_organization_name)%></label></td>
-              <td class="dataCol"><%=f.select(:organization_id,available_organization,{},:id=>"organization_select",:required=>true)%></td>
+             <tr>
+              <td class="labelCol"><label><%=(t :label_irm_group_group_code)%></label></td>
+              <td class="dataCol"><%=@group.code%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_department_short_name)%></label></td>
-              <td class="dataCol"><%=@department.short_name%></td>
-              <td class="labelCol"><label><%=(t :label_irm_department_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name,:value=>@department[:name], :required=>true %></td>              
+              <td class="labelCol"><label><%=(t :label_irm_group_name)%></label></td>
+              <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
+
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_department_description)%></label></td>
-              <td class="dataCol"><%=f.text_area :description,:value=>@department[:description],:rows=>4%></td>
-              <td class="labelCol"><label><%=(t :label_irm_script_status_code)%></label></td>
-              <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
+              <td class="labelCol"><label><%=(t :label_irm_group_parent)%></label></td>
+              <td class="dataCol"><%=f.blank_select :parent_group_id, available_parentable_group(@group.id), {}%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_group_description)%></label></td>
+              <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
         </tbody>
       </table>
