--- a/app/views/irm/groups/_new_form.html.erb
+++ b/app/views/irm/groups/_new_form.html.erb
@@ -1,12 +1,11 @@
 <%= setting_title %>
-
-<%= form_for(@department,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@group,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_department_new)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_group_new)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
             <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
@@ -16,7 +15,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @department%>
+    <%= error_for @group%>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
           <span class="requiredLegend">
@@ -27,31 +26,33 @@
           <span class="requiredText"> = <%=t(:label_is_required)%></span>
           </span>
       </span>
-      <h3><%=t(:label_irm_department_info)%></h3>
+      <h3><%=t(:label_common_info)%></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_department_company_name)%></label></td>
-              <td class="dataCol"><%=f.select(:company_id,available_company,
-                                                {},:id=>"company_id",:required=>true)%></td>
-              <td class="labelCol"><label><%=(t :label_irm_department_organization_name)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:organization_id,[],{},
-                                  {:required=>true,
-                                   :id=>"organization_id",
-                                   :href=>url_for(:controller=>"irm/organizations",:action=>"get_by_company",:format=>"json",:belonged_company_id=>"{company_id}"),
-                                   :depend=>"company_id"
-                                   }) %></td>
+              <td class="labelCol"><label><%=(t :label_irm_group_group_code)%></label></td>
+              <td class="dataCol"><%=f.text_field :code, :irm_uppercase=>true,:required=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_department_short_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :short_name, :required=>true,:irm_uppercase=>true%></td>
-              <td class="labelCol"><label><%=(t :label_irm_department_name)%></label></td>
+              <td class="labelCol"><label><%=(t :label_irm_group_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
+
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_department_description)%></label></td>
+              <td class="labelCol"><label><%=(t :label_irm_group_parent)%></label></td>
+              <td class="dataCol"><%=f.blank_select :parent_group_id, available_parentable_group, {}%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_group_description)%></label></td>
               <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
@@ -75,9 +76,6 @@
   </div>
 </div>
 <% end %>
-<script type="text/javascript">
-  GY.use("cascadeselect",function(Y){
-     new Y.CascadeSelect({source: "#company_id",target:["#organization_id"]});
-  });
-</script>
+
+
 
