--- a/app/views/csi/surveys/show.html.erb
+++ b/app/views/csi/surveys/show.html.erb
@@ -153,54 +153,23 @@
         </table>
      </div>
     <div class="pbBody">
-        <% if @survey_ranges.blank? %>
-        <div style="font-size: 15px;"><%= t(:label_no_data) %></div>
-         <% else %>
-        <div class="datatable">
-          <div class="yui3-widget yui3-datatable">
-            <div class="yui3-datatable-content">
-                <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
-                  <thead class="yui3-datatable-columns">
-                    <tr class="yui3-datatable-first yui3-datatable-last">
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_csi_survey_range_range_type) %>
-                        </div>
-                      </th>
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_csi_survey_range_name) %>
-                        </div>
-                      </th>
-                      <th class="yui3-column">
-                        <div class="yui3-datatable-liner"><%= t(:label_csi_survey_range_required_flag) %>
-                        </div>
-                      </th>
-                    </tr>
-                  </thead>
-                  <tbody class="yui3-datatable-data">
-                  <% @survey_ranges.each do |range| %>
-                  <tr id="<%=range%>" class="yui3-datatable-even">
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
-                        <%=range[:source_type_name]%>
-                      </div>
-                    </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
-                        <%=range[:source_name]%>
-                      </div>
-                    </td>
-                    <td class="yui3-column">
-                      <div class='yui3-datatable-liner'>
-                        <%=check_img(range[:required_flag])%>
-                      </div>
-                    </td>
-                  </tr>
-                  <% end -%>
-                  </tbody>
-                </table>
-            </div>
-          </div>
-        </div>
+        <%ranges = duel_meaning(@survey.get_range_str,duel_values)%>
+        <% if ranges.any? %>
+        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <% ranges.each do |r|%>
+            <tr>
+              <td class="labelCol"></td>
+              <td class="dataCol"><%= r%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <% else %>
+          <div style="font-size: 15px;"><%= t(:label_no_data) %></div>
         <% end %>
     </div>
   </div>
